--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@ h3{
     background-color: rgb(1, 31, 38);
     grid-area: nav;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 .nav__div{
     text-align: center;
@@ -46,6 +48,7 @@ h3{
     color: rgb(242, 242, 242);
     font-size: 1.5rem;
     margin: 1%;
+
 }
 .nav__img{
     width: 20%;
@@ -53,6 +56,13 @@ h3{
 }
 .nav__li{
     width: 80%;
+}
+nav div img{
+    width: 100%;
+    margin: 1%;
+} 
+#bt__color{
+    color: rgb(242, 242, 242);
 }
 /* ----- ends nav ----- */
 
@@ -167,12 +177,19 @@ h3{
         "main main" 
         "footer footer";
     }
+    .nav{
+        display: flex;
+        justify-content: space-between;
+    }
+    .nav__img{
+        width: 10%;
+    }
     .nav__div{
         width: 100%;
     }
     .nav__ul{
         display: flex;
-        width: 100%;
+        width: 85%;
         justify-content: space-between;
         list-style: none;
         align-items: center;
@@ -199,17 +216,14 @@ h3{
         "main main main" 
         "footer footer footer";
     }
-    .nav{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .nav__div{
+    /* .nav__div{
         width: 10%;
         padding: 1%;
-    }
+        display: flex;
+        justify-content: space-around;
+    } */
     .nav__img{
-        width: 100%;
+        width: 10%;
     }
     .nav__ul{
         list-style: none;
@@ -221,6 +235,5 @@ h3{
     .nav__li :hover{
         border-radius: 2.5%;
         background-color: rgb(3, 127, 140);
-        padding: 5%;
     }
 }
