--- a/css/style.css
+++ b/css/style.css
@@ -68,31 +68,33 @@ h3{
 .main{
     background-color: rgb(242, 242, 242);
     grid-area: main;
+    padding-bottom: 2%;
 }
 .main__section{
     width: 100%;
 }
 .main__parr{
     font-size: 1.0rem;
-    width: 100%;
+    width: 98%;
     margin: 1%;
 }
 .main__form{
-    width: 100%;
+    width: 98%;
     margin: 1%;
 }
 .main__article{
-    width: 48%;
-    margin: 2%;
+    width: 90%;
+    margin: 0 auto;
 }
 .main__img{
-    width: 80%;
+    width: 90%;
+    margin: auto;
 }
 /* ----- ends main ----- */
 
 /* -----begins form ----- */
 .form__fieldset{
-    width: 90%;
+    width: 95%;
     margin: 1%;
     padding: 1%;
 }
@@ -105,7 +107,7 @@ h3{
     font-size: 1rem;
 }
 .form__input{
-    width: 70%;
+    width: 95%;
     margin: 1%;
     padding: 1%;
 }
@@ -115,10 +117,10 @@ h3{
 /* ----- ends form ----- */
 
 /* ----- button begin ----- */
-.button{
+.form__button{
     background-color: rgb(2, 94, 115);
     color: rgb(242, 242, 242);
-    border: solid 5% rgb(1, 1, 1);
+    border-radius: 10%;
     padding: 1.5%;
     margin: 2% 0% 2% 2%;
 }
@@ -132,7 +134,7 @@ h3{
     width: 100%;
 }
 .footer__ul{
-    width: 20%;
+    width: 35%;
     display: flex;
     list-style: none;
 }
@@ -178,7 +180,14 @@ h3{
         align-items: center;
         text-align: center;
     }
+    .footer__ul{
+        width: 20%;
+    }
+    .nav__img{
+        width: 16%;
+    }
 }
+
 /* ----- media queries desktop ----- */
 
 @media only screen and (min-device-width:1024px) {
@@ -209,7 +218,7 @@ h3{
         padding: 1%;
     }
     .nav__img{
-        width: 100%;
+        width: 40%;
     }
     .nav__ul{
         list-style: none;
@@ -222,5 +231,30 @@ h3{
         border-radius: 2.5%;
         background-color: rgb(3, 127, 140);
         padding: 5%;
+    }
+    .main__section{
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    .main__article{
+        width: 45%;
+        margin: 2%;
+    }
+    #art-3{
+        order: 3;
+    }
+    .form__div{
+        display: flex;
+        justify-content: end;
+
+    }
+    .form__button{
+        border-radius: 10%;
+        padding: 0.8%;
+        margin: 2% 1.9% 0% 2%;
+    }
+    .footer__Ul{
+        width: 10%;
     }
 }
