--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+.form__button {
+  background-color: #025e73;
+  color: #f2f2f2;
+  border-radius: 10%;
+  padding: 1.5%;
+  margin: 2% 0% 2% 2%; }
+
 * {
   font-family: 'Roboto', sans-serif;
   margin: 0%;
@@ -168,8 +175,7 @@ h3 {
     .main section .form__div {
       display: flex;
       justify-content: end; }
-    .main section .form__button {
-      border-radius: 10%;
+    .main section .button__resp {
       padding: 0.8%;
       margin: 2% 1.9% 0% 2%; } }
 
