--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,3 +1,10 @@
+// fonts
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+*{
+    font-family: 'Roboto', sans-serif;
+    margin: 0%;
+    padding: 0%;
+}
 // background colors
 $principalColor: rgb(242, 242, 242);
 $secondaryColor: rgb(1, 31, 38);
