--- a/css/style.css
+++ b/css/style.css
@@ -89,34 +89,16 @@ h3 {
   grid-template-areas: "nav" "header" "main" "footer"; }
 
 @media only screen and (min-device-width: 768px) {
-  #body-a {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "nav nav" 
- "main main" 
- "footer footer"; }
   #body-b {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "nav nav"
- "header header"
- "main main" 
- "footer footer"; } }
+    grid-template-areas: "nav nav" "header header" "main main"  "footer footer"; } }
 
 @media only screen and (min-device-width: 1024px) {
-  #body-a {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: "nav nav nav" 
- "main main main" 
- "footer footer footer"; }
   #body-b {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: "nav nav nav"
- "header header header"
- "main main main" 
- "footer footer footer"; } }
+    grid-template-areas: "nav nav nav" "header header header" "main main main"  "footer footer footer"; } }
 
 .header {
   grid-area: header;
